--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GIT VSCODE</title>
   </head>
   <body>
-    <!--DIV CONTENEDOR 1-->
+    <!--DIV CONTENEDOR -->
 
     <div class="contai">
       <div class="row">
@@ -15,7 +15,8 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae,
           quo!
         </p>
-        <p>primer push</p>
+        <p>primera prueba</p>
+        <p>segunda prueba</p>
       </div>
     </div>
   </body>
