--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae,
           quo!
         </p>
-        <p>primera prueba</p>
-        <p>segunda prueba</p>
+        <p>Tercera prueba</p>
       </div>
     </div>
   </body>
